--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -32,8 +32,32 @@ jobs:
           echo 'yo ${{ matrix.NAME }}' > ${{ matrix.NAME }}/test.txt
           tar cvzf ${{ matrix.NAME }}.tar.gz ${{ matrix.NAME }}
 
-      - name: Create GitHub Release
-        shell: bash
-        run: |
-          echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
-          gh release create ${{ github.ref }} ${{ matrix.NAME }}.tar.gz --title "Release ${{ github.ref }}" --notes "Release for ${{ matrix.NAME }} version ${{ matrix.VERSION }}"
+      - name: Create release
+        uses: github-script@v6
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            github.repos.createRelease({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              tag_name: 'v${{ matrix.VERSION }}-${{ matrix.NAME }}',
+              name: 'Release ${{ matrix.NAME }} ${{ matrix.VERSION }}',
+              body: 'Release notes for ${{ matrix.VERSION }}-${{ matrix.NAME }}'
+            })
+
+      - name: Upload artifact to release
+        uses: github-script@v6
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            github.repos.uploadReleaseAsset({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              release_id: github.repos.getReleaseByTag({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                tag: 'v${{ matrix.VERSION }}-${{ matrix.NAME }}'
+              }).data.id,
+              name: '${{ matrix.NAME }}.tar.gz',
+              data: fs.readFileSync('${{ matrix.NAME }}.tar.gz')
+            })
