--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -51,7 +51,7 @@ jobs:
             github.rest.repos.uploadReleaseAsset({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              release_id: github.repos.getReleaseByTag({
+              release_id: github.rest.repos.getReleaseByTag({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 tag: 'v${{ matrix.VERSION }}-${{ matrix.NAME }}'
