try with output from create release

--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -34,15 +34,17 @@ jobs:
 
       - name: Create release
         uses: actions/github-script@v7
+        id: create_release
         with:
           script: |
-            github.rest.repos.createRelease({
+            const response = await github.rest.repos.createRelease({
               owner: context.repo.owner,
               repo: context.repo.repo,
               tag_name: 'v${{ matrix.VERSION }}-${{ matrix.NAME }}',
               name: 'Release ${{ matrix.NAME }} ${{ matrix.VERSION }}',
               body: 'Release notes for ${{ matrix.VERSION }}-${{ matrix.NAME }}'
-            })
+            });
+            core.setOutput("release_id", response.data.id);  # This line sets the release ID as an output
 
       - name: Upload artifact to release
         uses: actions/github-script@v7
@@ -51,11 +53,7 @@ jobs:
             github.rest.repos.uploadReleaseAsset({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              release_id: github.rest.repos.getReleaseByTag({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                tag: 'v${{ matrix.VERSION }}-${{ matrix.NAME }}'
-              }).data.id,
+              release_id: '${{ steps.create_release.outputs.release_id }}',
               name: '${{ matrix.NAME }}.tar.gz',
               data: fs.readFileSync('${{ matrix.NAME }}.tar.gz')
             })
