--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -44,13 +44,13 @@ jobs:
               name: 'Release ${{ matrix.NAME }} ${{ matrix.VERSION }}',
               body: 'Release notes for ${{ matrix.VERSION }}-${{ matrix.NAME }}'
             });
-            console.log(JSON.stringify(response, null, 2));
             core.setOutput("release_id", response.data.id);
 
       - name: Upload artifact to release
         uses: actions/github-script@v7
         with:
           script: |
+            const fs = require('fs');
             github.rest.repos.uploadReleaseAsset({
               owner: context.repo.owner,
               repo: context.repo.repo,
