--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -32,7 +32,7 @@ jobs:
           echo 'yo ${{ matrix.NAME }}' > ${{ matrix.NAME }}/test.txt
           tar cvzf ${{ matrix.NAME }}.tar.gz ${{ matrix.NAME }}
 
-      - name: Create release
+      - name: Create release // need read and write permission for workflow https://github.com/{{owner}}/{{repo}}/settings/actions
         uses: actions/github-script@v7
         id: create_release
         with:
